--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_FilteredOrderPartialView.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/_FilteredOrderPartialView.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<OrderListViewModel>
-@foreach(var order in Model)
+@foreach (var order in Model)
 {
     <tr>
         <td>@order.OrderNumber</td>
@@ -7,10 +7,12 @@
         <td>@($"{@order.FirstName} {order.LastName}")</td>
         <td>@($"{order.TotalPrice():C2}")</td>
         <td>
-           <div class="custom-control custom-switch">
-           <input onchange="changeOrderState(this,'@order.Id');"type="checkbox"class="custom-control-input" name="orderState"id="orderState-@order.Id" />
+            <div class="custom-control custom-switch">
+                <input onchange="changeOrderState(this,'@order.Id');" type="checkbox" class="custom-control-input" name="orderState"
+                @(order.OrderState == RhythmicRealm.Shared.ComplexTypes.EnumOrderState.Preparing ? "checked disabled" : "")
+                       id="orderState-@order.Id" />
                 <label class="custom-control-label" for="orderState-@order.Id">@order.OrderState</label>
-           </div>                          
-        <td>
+            </div>
+        </td>
     </tr>
 }
