--- a/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@model StoreViewModel
 <vc:navbar-of-main-cat></vc:navbar-of-main-cat>
 
-
 <!-- SECTION -->
 <div class="section">
 	<!-- container -->
@@ -100,9 +99,22 @@
 													<a asp-area="" asp-controller="ProductDetails" asp-action="Index" asp-route-id="@product.Id" class="quick-view" style="cursor:pointer"><i class="fa fa-eye"></i><span class="tooltipp">İncele</span></a>
 												</div>
 											</div>
+									@if (User.Identity.IsAuthenticated)
+									{
+										<form asp-area="" asp-controller="Basket" asp-action="AddToBasket" method="post">
+											<input type="hidden" value="@product.Id" name="productId" />
+											<input type="hidden" value="1" name="quantity" />
 											<div class="add-to-cart">
-												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i>Sepete Ekle</button>
 											</div>
+										</form>
+									}
+									else
+									{
+										<div class="add-to-cart">
+											<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i><a asp-area="" asp-controller="Account" asp-action="Login">Sepete Ekle</a></button>
+										</div>
+									}
 										</div>
 									</div>
                
