--- a/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using RhythmicRealm.Shared.ViewModels.MessageViewModels
 @using RhythmicRealm.Shared.ViewModels.ShoppingBasketViewModels
 @using RhythmicRealm.Shared.ViewModels.OrderViewModels
+@using RhythmicRealm.Entity.Concrete.Others
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
