--- a/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
@@ -95,8 +95,8 @@
 												<i class="fa fa-star"></i>
 											</div>
 											<div class="product-btns">
-												<a asp-area="" asp-controller="FavProducts" asp-action="AddToFavs" asp-route-productId="@product.Id" style="cursor:pointer"><i class="fa fa-heart-o"></i><span class="tooltipp">Beğen</span></a>
-												<a asp-area="" asp-controller="ProductDetails" asp-action="Index" asp-route-id="@product.Id" style="cursor:pointer"><i class="fa fa-eye"></i><span class="tooltipp">İncele</span></a>
+												<a asp-area="" asp-controller="FavProducts" asp-action="ToggleFavorite" asp-route-productId="@product.Id" style="cursor:pointer"><i style="font-size:20px;" class="fa fa-heart-o"></i><span class="tooltipp"></span></a>
+												<a asp-area="" asp-controller="ProductDetails" asp-action="Index" asp-route-id="@product.Id" style="cursor:pointer"><i style="font-size:20px;" class="fa fa-eye"></i><span class="tooltipp"></span></a>
 											</div>
 										</div>
 										@if (User.Identity.IsAuthenticated)
