--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -68,13 +68,13 @@
 
 											</a>
 											<ul class="dropdown-menu">
-												<li><a asp-area="" asp-controller="CheckOut" asp-action="GetOrders">Siparişlerim</a></li>
+												<li><a asp-area="" asp-controller="CheckOut" asp-action="GetOrders"> <i class="fa fa-credit-card-alt" aria-hidden="true"></i> <span>Siparişlerim</span> </a></li>
 												<li role="separator" class="divider"></li>
-												<li><a asp-area="" asp-controller="FavProducts" asp-action="Index">Favorilerim</a></li>
+												<li><a asp-area="" asp-controller="FavProducts" asp-action="Index"><i class="fa fa-heart-o" aria-hidden="true"></i> <span>Favorilerim</span></a></li>
 												<li role="separator" class="divider"></li>
-												<li><a asp-area="" asp-controller="Account" asp-action="Profile">Kullanıcı Bilgilerim</a></li>
+												<li><a asp-area="" asp-controller="Account" asp-action="Profile"><i class="fa fa-user-o" aria-hidden="true"></i> <span>Kullanıcı Bilgilerim</span></a></li>
 												<li role="separator" class="divider"></li>
-												<li><a asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a></li>
+												<li><a asp-area="" asp-controller="Account" asp-action="Logout"><i class="fa fa-sign-out" aria-hidden="true"></i> <span>Çıkış Yap</span></a></li>
 											</ul>
 										</div>
 									</div>
