gallery section added

--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
@@ -168,6 +168,14 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a asp-area="Admin" asp-controller="Gallery" asp-action="Index" class="nav-link">
+                        <i style="font-size:24px;" class="nav-icon far fa-image"></i>
+                        <p>
+                            Galeri
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="pages/gallery.html" class="nav-link">
                         <i class="fa fa-upload" aria-hidden="true"></i>
                         <p>
