--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using RhythmicRealm.Shared.ViewModels.Identity
 @using RhythmicRealm.Shared.ViewModels.MessageViewModels
 @using RhythmicRealm.Shared.ViewModels.OrderViewModels
+@using RhythmicRealm.Shared.ViewModels.GalleryViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
