--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -37,7 +37,7 @@
 
 						<div class="header-search">
 							<form id="searchForm" asp-area="" asp-controller="Store" asp-action="Search" method="post">
-								<input id="searchTerm" class="input" placeholder="Aradığınız ürün, kategori, marka.. ">
+								<input name="query" id="query" class="input" placeholder="Aradığınız ürün, kategori, marka.. ">
 								<button type="submit" class="search-btn">Ara</button>
 							</form>
 						</div>
@@ -92,11 +92,13 @@
 
 											</a>
 											<ul class="dropdown-menu">
-												<li><a asp-area="" asp-controller="CheckOut" asp-action="GetOrders">Siparişlerim</a></li>
+												<li><a asp-area="" asp-controller="CheckOut" asp-action="GetOrders"> <i class="fa fa-credit-card-alt" aria-hidden="true"></i> <span>Siparişlerim</span> </a></li>
 												<li role="separator" class="divider"></li>
-												<li><a asp-area="" asp-controller="Account" asp-action="Profile">Kullanıcı Bilgilerim</a></li>
+												<li><a asp-area="" asp-controller="FavProducts" asp-action="Index"><i class="fa fa-heart-o" aria-hidden="true"></i> <span>Favorilerim</span></a></li>
 												<li role="separator" class="divider"></li>
-												<li><a asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a></li>
+												<li><a asp-area="" asp-controller="Account" asp-action="Profile"><i class="fa fa-user-o" aria-hidden="true"></i> <span>Kullanıcı Bilgilerim</span></a></li>
+												<li role="separator" class="divider"></li>
+												<li><a asp-area="" asp-controller="Account" asp-action="Logout"><i class="fa fa-sign-out" aria-hidden="true"></i> <span>Çıkış Yap</span></a></li>
 											</ul>
 										</div>
 									</div>
@@ -155,26 +157,3 @@
 </header>
 <!-- /HEADER -->
 
-<script>
-	document.getElementById("searchForm").addEventListener("submit", function(event) {
-		event.preventDefault(); // Sayfanın yeniden yüklenmesini engelle
-
-		var searchTerm = document.getElementById("searchTerm").value; // Arama terimini al
-
-		var xhr = new XMLHttpRequest(); // AJAX isteği oluştur
-		xhr.open("POST", this.action, true); // Formun action özelliğine göre POST isteği gönder
-		xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-		xhr.onreadystatechange = function () {
-			if (xhr.readyState === XMLHttpRequest.DONE) {
-				if (xhr.status === 200) {
-					// Başarılı ise sayfayı yeniden yükle
-					window.location.reload();
-				} else {
-					// Hata durumunda uygun işlem yapılabilir
-					console.error("Arama isteği sırasında bir hata oluştu.");
-				}
-			}
-		};
-		xhr.send("query=" + encodeURIComponent(searchTerm)); // Arama terimini isteğe ekleyerek gönder
-	});
-</script>
