--- a/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
@@ -42,13 +42,12 @@
 																	</div>
 																	<div class="col-md-2 quantity">
 																		<label for="quantity">Adet</label>
-																	<input onchange="changeQuantity(this)" data-item-id="@item.BasketItemId" id="quantity" type="number" value="1" class="form-control quantity-input">
+																	<input onchange="changeQuantity(this)" data-item-id="@item.BasketItemId" id="quantity-@item.ProductId" type="number" value="@item.Quantity" class="form-control quantity-input">
 																	</div>
-																	<div class="col-md-3 price">
-																		<span id="item-total">@($"{item.Price:C2}")</span>
-																	</div>
-																	<div class="col-md-1">
-																		<a asp-area="" asp-controller="Basket" asp-action="RemoveFromBasket" asp-route-productId="@item.ProductId" style="float: right;">
+																<div class="col-md-3 price">
+																	<span id="item-total-@item.BasketItemId">@($"{(item.Price * item.Quantity):C2}")</span>
+																</div>
+																	<div class="col-md-1">																		<a asp-area="" asp-controller="Basket" asp-action="RemoveFromBasket" asp-route-productId="@item.ProductId" style="float: right;">
 																			<i style="font-size:18px;" class="fa fa-trash" aria-hidden="true"></i>
 																		</a>
 																	</div>
@@ -67,16 +66,18 @@
 								
 								<div class="col-md-12 col-lg-4">
 									<div class="summary">
+										@{
+											var total = Model.BasketItems.Sum(x => x.Price * x.Quantity);
+											var discount = (double)total * 0.1;
+											var newTotal = (double)total - discount;
+										}
 										<h3>Sipariş Özeti</h3>
 										<div class="summary-item">
-											<span class="text">Ürünün Toplamı</span><span id="basket-total" class="price">@($"{Model.TotalPrice():C2}")</span>
+											<span class="text">Ürünün Toplamı</span>
+											<span id="basket-total" class="price">@($"{total:C2}")</span>
 										</div>
 										<div class="summary-item">
-											@{
-												var total = Model.TotalPrice();
-												var discount =(double) total * 0.1;
-												var newTotal = (double)total - discount;
-											}
+											
 											<span class="text">Sepette %10 İndirim </span><span id="discount" class="price">@($"{discount:C2}")</span>
 										</div>
 										<div class="summary-item">
@@ -150,18 +151,25 @@
 	function changeQuantity(element) {
 		var newQuantity = $(element).val();
 		var itemId = $(element).data("item-id");
-		
+		var minQuantity = 1;
+		if (newQuantity < minQuantity) {
+			$(element).val(minQuantity);
+			newQuantity = minQuantity;
+		}
+
 		$.ajax({
 			type: "POST",
 			url: "/Basket/UpdateQuantity",
 			data: { shoppingBasketItemId: itemId, quantity: newQuantity },
 			success: function (response) {
 				if (response.success) {
-					$("#item-total").text(response.basketItemTotal);
+					var updatedItemTotalId = "#item-total-" + itemId;
+					$(updatedItemTotalId).text(response.basketItemTotal);
+
 					$("#discount").text(response.discount);
 					$("#basket-total").text(response.basketTotal);
 					$("#new-total").text(response.newTotal);
-					
+
 				} else {
 					alert("Bir hata oluştu: " + response.message);
 				}
