--- a/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<ProductViewModel>
-<vc:navbar-of-main-cat></vc:navbar-of-main-cat>
+@await Component.InvokeAsync("NavbarOfMainCat")
 
 <!-- SECTION -->
 <div class="section">
@@ -181,7 +181,7 @@
 	<!-- /container -->
 </div>
 <!-- /HOT DEAL SECTION -->
-<vc:brand></vc:brand>
+@await Component.InvokeAsync("Brand")
 
 @section BottomScripts{
 
