--- a/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductViewModel
 
-<vc:navbar-of-main-cat></vc:navbar-of-main-cat>
+@await Component.InvokeAsync("NavbarOfMainCat")
 
 
 <!-- SECTION -->
