--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_BasketLayout.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_BasketLayout.cshtml
@@ -43,7 +43,7 @@
 		<!-- container -->
 		<div class="container">
 
-			<vc:navbar-of-main-cat></vc:navbar-of-main-cat>
+			@await Component.InvokeAsync("NavbarOfMainCat")
 		</div>
 		<!-- /container -->
 	</nav>
