--- a/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model StoreViewModel
-<vc:navbar-of-main-cat></vc:navbar-of-main-cat>
+@await Component.InvokeAsync("NavbarOfMainCat")
 
 <!-- SECTION -->
 <div class="section">
