--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/Navbar/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/Navbar/Default.cshtml
@@ -10,8 +10,7 @@
 
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
-    
-        <vc:navbar-messages></vc:navbar-messages>
+    @await Component.InvokeAsync("NavbarMessages")
      
         <li class="nav-item">
             <a class="nav-link" data-widget="fullscreen" href="#" role="button">
