--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Home/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Home/Index.cshtml
@@ -9,22 +9,60 @@
     </div>
     <section class="content">
         <div class="container-fluid">
+            <!-- Small boxes (Stat box) -->
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-lg-3 col-6">
+                    <!-- small box -->
+                    <div class="small-box bg-info">
+                        <div class="inner">
+                            <h3>150</h3>
+
+                            <p>Yeni Ürünler</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-bag"></i>
+                        </div>
+                        <a asp-area="Admin" asp-controller="Home" asp-action="GetNewProducts" class="small-box-footer">İncele <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+              
+                <div class="col-lg-3 col-6">
+                    <!-- small box -->
+                    <div class="small-box bg-warning">
+                        <div class="inner">
+                            <h3>44</h3>
+
+                            <p>Yeni Kullanıcılar</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                        <a asp-area="Admin" asp-controller="Home" asp-action="GetNewUsers" class="small-box-footer">İncele <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                
+            </div>
+            <!-- /.row -->
+            <!-- Main row -->
+            <div class="row">
+                <!-- Left col -->
+                <section class="col-lg-7 connectedSortable">
+                    <!-- Custom tabs (Charts with tabs)-->
                     <div class="card">
                         <div class="card-header">
                             <h3 class="card-title">
                                 <i class="fas fa-chart-pie mr-1"></i>
                                 Siparişler
                             </h3>
-                        </div>
+                            
+                        </div><!-- /.card-header -->
                         <table class="table table-striped table-valign-middle">
                             <thead>
                                 <tr>
                                     <th>Sipariş Numarası</th>
                                     <th>Sipariş Tarihi</th>
                                     <th>Üye Adı Soyadı</th>
-                                    <th>Sİpariş Tutarı</th>
+                                    <th>Sipariş Tutarı</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -40,36 +78,12 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-md-10 mb-3">
-                            <div class="small-box bg-info">
-                                <div class="inner">
-                                    <h3>44</h3>
-                                    <p>Yeni Ürünler</p>
-                                </div>
-                                <div class="icon">
-                                    <i class="ion ion-person-add"></i>
-                                </div>
-                                <a asp-area="Admin" asp-controller="Home" asp-action="GetNewProducts" class="small-box-footer">İncele <i class="fas fa-arrow-circle-right"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-md-10 mb-3">
-                            <div class="small-box bg-warning">
-                                <div class="inner">
-                                    <h3>44</h3>
-                                    <p>Bugün Kayıt Olan Kullanıcılar</p>
-                                </div>
-                                <div class="icon">
-                                    <i class="ion ion-person-add"></i>
-                                </div>
-                                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                 
+                </section>
+                <!-- /.Left col -->
+               
             </div>
-        </div>
+            <!-- /.row (main row) -->
+        </div><!-- /.container-fluid -->
     </section>
 </div>
