--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/MainCategory/Edit.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/MainCategory/Edit.cshtml
@@ -18,7 +18,7 @@
                                asp-controller="MainCategory"
                                asp-action="Index"
                                class="btn btn-dark btn-sm">
-                                Ürün Listesi
+                                Ana Kategori Listesi
                             </a>
                         </div>
                     </div>
