--- a/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
@@ -65,7 +65,14 @@
 					</div>
 
 					<ul class="product-btns">
-						<li><a asp-area="" asp-controller="FavProducts" asp-action="ToggleFavorite" asp-route-productId="@Model.Id" style="cursor:pointer"><i style="font-size:20px;"	class="fa fa-heart-o"></i><span class="tooltipp"></span></a></li>
+						@if (User.Identity.IsAuthenticated)
+						{
+							<a asp-area="" asp-controller="FavProducts" asp-action="ToggleFavorite" asp-route-productId="@Model.Id" style="cursor:pointer"><i style="font-size:20px;" class="fa fa-heart-o"></i><span class="tooltipp"></span></a>
+						}
+						else
+						{
+							<a asp-area="" asp-controller="Account" asp-action="Login" style="cursor:pointer"><i style="font-size:20px;" class="fa fa-heart-o"></i><span class="tooltipp"></span></a>
+						}
 					</ul>
 
 					<ul class="product-links">
