some errors fixed

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -1,4 +1,34 @@
 ﻿	<!-- HEADER -->
+	<style>
+	.header-search {
+		padding: 15px 0px;
+	}
+
+		.header-search form {
+			position: relative;
+			margin-left: 100px;
+		}
+
+			.header-search form .input-select {
+				margin-right: -4px;
+				border-radius: 40px 0px 0px 40px;
+			}
+
+			.header-search form .input {
+				width: calc(100% - 100px);
+				margin-right: -4px;
+			}
+
+			.header-search form .search-btn {
+				height: 40px;
+				width: 100px;
+				background: #D10024;
+				color: #FFF;
+				font-weight: 700;
+				border: none;
+				border-radius: 0px 40px 40px 0px;
+			}
+	</style>
 <header>
 	<!-- TOP HEADER -->
 	<div id="top-header">
@@ -26,8 +56,8 @@
 				<div class="container-edit">
 					<div class="col-lg-2 col-md-2 col-sm-2 hidden-xs">
 
-						<div class="logo_container">
-							<a href="/">Rhythmic<span>Realm</span></a>
+						<div class="logo_container" style="margin-top:20px;">
+							<a style="color:#d21737;font-size: 24px;font-weight: 700;text-transform: uppercase;" href="/">Rhythmic<span style="color:#fff">Realm</span></a>
 						</div>
 
 					</div>
