--- a/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
+++ b/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
@@ -62,16 +62,15 @@ Table OF Contents
     
 }
 
-    .logo_container a {
+/*.logo_container a {
         font-size: 24px;
         color: #d21737;
         font-weight: 700;
         text-transform: uppercase;
     }
-
-        .logo_container a span {
+.logo_container a span {
             color: #fff;
-        }
+        }*/
 
 
 body {
@@ -501,36 +500,7 @@ textarea.input {
 	Search
 \*----------------------------*/
 
-.header-search {
-  padding: 15px 0px;
-}
 
-.header-search form {
-  position: relative;
-  margin-left:100px;
-
-}
-
-.header-search form .input-select {
-  margin-right: -4px;
-  border-radius: 40px 0px 0px 40px;
-}
-
-.header-search form .input {
-  width: calc(100% - 100px);
-  margin-right: -4px;
-}
-
-.header-search form .search-btn {
-  height: 40px;
-  width: 100px;
-  background: #D10024;
-  color: #FFF;
-  font-weight: 700;
-  border: none;
-  border-radius: 0px 40px 40px 0px;
-  
-}
 .brand-search {
     padding: 15px 0px;
 }
