contact message seed data has created.

--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Contact/GetContactDetails.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Contact/GetContactDetails.cshtml
@@ -107,7 +107,7 @@
                                     <h5>Konu: @Html.DisplayFor(x=>x.Subject)</h5>
                                     <br />
                                     <h6>
-                                        Kimden: @Html.DisplayFor(x => x.UserMail)
+                                        Kimden: @Html.DisplayFor(x => x.SenderMail)
                                         <span class="mailbox-read-time float-right">@Model.MessageDate</span>
                                     
                                     </h6>
