--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetUserMessageDetails.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetUserMessageDetails.cshtml
@@ -31,7 +31,7 @@
                                 <h5>Konu: @Html.DisplayFor(x => x.Subject)</h5>
                                 <br />
                                 <h6>
-                                    Gönderici: @Html.DisplayFor(x => x.UserMail)
+                                    Gönderici: @Html.DisplayFor(x => x.SenderMail)
                                   
 
                                 </h6>
