--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/TrashMessages.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/TrashMessages.cshtml
@@ -70,7 +70,7 @@
                                                     </a>
                                                 </td>
                                                 <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
-                                                <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetSendBoxMessageDetails" asp-route-id="@item.Id">@item.UserMail</a></td>
+                                                <td class="mailbox-name"><a asp-area="Admin" asp-controller="Message" asp-action="GetSendBoxMessageDetails" asp-route-id="@item.Id">@item.SenderMail</a></td>
                                                 <td class="mailbox-subject">
                                                     <b>@item.Subject</b> -  @(item.Content.Length > 30 ? $"{item.Content.Substring(0, 30)}..." : item.Content)
                                                 </td>
