--- a/RhythmicRealm/RhythmicRealm.UI/Views/Contact/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Contact/Index.cshtml
@@ -38,8 +38,8 @@
 
                         <div class="col-lg-6">
                             <fieldset>
-                                <input asp-for="@Model.UserMail" type="text" placeholder="Email adresiniz" required="">
-                                <span class="text-danger" asp-validation-for="@Model.UserMail"></span>
+                                <input asp-for="@Model.SenderMail" type="text" placeholder="Email adresiniz" required="">
+                                <span class="text-danger" asp-validation-for="@Model.SenderMail"></span>
                             </fieldset>
                         </div>
                         <div class="col-lg-6 ">
